Phase_V/kubernetes/recurring-task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recurring-task-service
  namespace: todo-app
  labels:
    app: recurring-task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recurring-task-service
  template:
    metadata:
      labels:
        app: recurring-task-service
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "recurring-task-service"
        dapr.io/app-port: "8002"
        dapr.io/log-level: "info"
    spec:
      containers:
      - name: recurring-task-service
        image: devhasnainraza/recurring-task-service:v1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: recurring-task-service
  namespace: todo-app
spec:
  selector:
    app: recurring-task-service
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
  type: ClusterIP
